# Unit_Tests

Unit_Testing_C++/: CMakeLists.txt  test_project.cpp
Unit_Testing_C++/src/: customer.cpp  customer.h  ecommerce_platform.cpp  ecommerce_platform.h  order.cpp  order.h  product.cpp  product.h
Unit_Testing_Python/src/: customer.py  ecommerce_platform.py  order.py  product.py
Unit_Testing_Python/test/: test_ecommerce.py
